# smartwatch

./: .cproject  .gitignore  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/SW_ESP_NTP/: CMakeLists.txt  SW_ESP_NTP.c
components/SW_ESP_NTP/include/: SW_ESP_NTP.h
components/SW_I2c_Driver/: CMakeLists.txt  SW_I2c_Driver.c
components/SW_I2c_Driver/include/: SW_I2c_Driver.h
components/SW_IMU_Driver/: CMakeLists.txt  SW_IMU_Driver.c
components/SW_IMU_Driver/include/: SW_IMU_Driver.h  Weather_struct.h
components/hts221_STdC_Driver/: CMakeLists.txt  hts221_reg.c
components/hts221_STdC_Driver/include/: hts221_reg.h
components/lis2mdl_STdC_Driver/: CMakeLists.txt
components/lis2mdl_STdC_Driver/include/: lis2mdl_reg.h
components/lps22hh_reg/: CMakeLists.txt  lps22hh_reg.c
components/lps22hh_reg/include/: lps22hh_reg.h
components/lsm6dso_STdC_Driver/: CMakeLists.txt  lsm6dso_reg.c
components/lsm6dso_STdC_Driver/include/: lsm6dso_reg.h
components/lvgl/lvgl/: lv_conf_template.h
components/lvgl/lvgl/src/: lv_conf_internal.h
components/lvgl/lvgl/src/lv_font/: lv_font.h
components/lvgl_esp32_drivers/: CMakeLists.txt
components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  disp_spi.c  ili9341.c
components/lvgl_esp32_drivers/lvgl_touch/: CMakeLists.txt  tp_spi.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/images/: battery.c  bluetooth.c  ellipse.c  humidity.c  news.c  pressure.c  steps.c  weather.c
main/images/png/: temperature.c
